--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: canvas_view
-description: "A new Flutter package project."
+description: "A two dimensional scrollable Canvas"
 version: 1.0.0
 
 homepage: https://github.com/KiSSEDBYFiR3/canvas_view
